[19] Add back the support to check if the JVM is a modular JVM if the Java Home was passed in.
Signed-off-by: James R. Perkins <jperkins@redhat.com>